# backend/src/main/java/com/mav/openzev/controller/AccountingController.java
@@ -1,5 +1,6 @@
 package com.mav.openzev.controller;
 
+import static java.util.Objects.isNull;
 
 import com.mav.openzev.api.AccountingApi;
 import com.mav.openzev.api.model.AccountingDto;
@@ -9,13 +10,18 @@ import com.mav.openzev.exception.ValidationException;
 import com.mav.openzev.mapper.AccountingMapper;
 import com.mav.openzev.model.Accounting;
 import com.mav.openzev.model.Agreement;
+import com.mav.openzev.model.Document;
 import com.mav.openzev.repository.AccountingRepository;
 import com.mav.openzev.repository.AgreementRepository;
+import com.mav.openzev.repository.DocumentRepository;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Objects;
+import java.util.Optional;
 import java.util.UUID;
 import lombok.RequiredArgsConstructor;
+import lombok.SneakyThrows;
+import org.springframework.core.io.ByteArrayResource;
+import org.springframework.core.io.Resource;
 import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -28,6 +34,7 @@ public class AccountingController implements AccountingApi {
 
   private final AccountingRepository accountingRepository;
   private final AgreementRepository agreementRepository;
+  private final DocumentRepository documentRepository;
 
   private final AccountingMapper accountingMapper;
 
@@ -83,7 +90,7 @@ public class AccountingController implements AccountingApi {
     final Accounting accounting =
         accountingRepository
             .findByUuid(accountingId)
-            .orElseThrow(() -> NotFoundException.ofInvoiceNotFound(accountingId));
+            .orElseThrow(() -> NotFoundException.ofAccountingNotFound(accountingId));
 
     if (!accounting.getInvoices().isEmpty()) {
       throw ValidationException.ofAccountingHasInvoice(accounting);
@@ -94,12 +101,42 @@ public class AccountingController implements AccountingApi {
   }
 
   private Agreement getAgreement(final UUID agreementId) {
-    if (Objects.isNull(agreementId)) {
+    if (isNull(agreementId)) {
       return null;
     }
 
     return agreementRepository
         .findByUuid(agreementId)
         .orElseThrow(() -> NotFoundException.ofAgreementNotFound(agreementId));
+  }
+
+  @Override
+  public ResponseEntity<Resource> getDocument(final UUID accountingId) {
+    final Accounting accounting =
+        accountingRepository
+            .findByUuid(accountingId)
+            .orElseThrow(() -> NotFoundException.ofAccountingNotFound(accountingId));
+
+    final Document document =
+        Optional.ofNullable(accounting.getDocument())
+            .orElseThrow(() -> NotFoundException.ofDocumentNotFound(accounting));
+
+    return ResponseEntity.ok(new ByteArrayResource(document.getData()));
+  }
+
+  @SneakyThrows
+  @Override
+  public ResponseEntity<UUID> createDocument(final UUID accountingId, final Resource body) {
+    final Accounting accounting =
+        accountingRepository
+            .findByUuid(accountingId)
+            .orElseThrow(() -> NotFoundException.ofAccountingNotFound(accountingId));
+
+    final Document document = new Document();
+    document.setData(body.getContentAsByteArray());
+    accounting.setDocument(documentRepository.save(document));
+
+    return ResponseEntity.status(HttpStatus.CREATED)
+        .body(accountingRepository.save(accounting).getUuid());
   }
 }
